Add layouts, Hero component, NavItem component, page

--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -1,3 +1,8 @@
 .copperplate {
-    font-family: Copperplate, "Copperplate Gothic Light", sans-serif;
+    font-family : Copperplate, "Copperplate Gothic Light", sans-serif;
+}
+
+.barlow {
+    font-family    : 'Barlow', sans-serif;
+    letter-spacing : 0.05em;
 }
