Desktop main nav with individual components

--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -3,6 +3,9 @@
 }
 
 .barlow {
-    font-family    : 'Barlow', sans-serif;
-    letter-spacing : 0.05em;
+    font-family : 'Barlow', sans-serif;
+}
+
+.open-sans {
+    font-family : 'Open Sans', sans-serif;
 }
