--- a/assets/scss/_utils.scss
+++ b/assets/scss/_utils.scss
@@ -5,3 +5,11 @@
     top      : 0;
     left     : 0;
 }
+
+.fixed-fill {
+    position : fixed;
+    height   : 100%;
+    width    : 100%;
+    top      : 0;
+    left     : 0;
+}
