--- a/assets/scss/_utils.scss
+++ b/assets/scss/_utils.scss
@@ -13,3 +13,10 @@
     top      : 0;
     left     : 0;
 }
+
+.fixed-center {
+    position  : fixed;
+    top       : 50%;
+    left      : 50%;
+    transform : translate(-50%, -50%);
+}
