--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -6,6 +6,6 @@
     font-family : 'Barlow', sans-serif;
 }
 
-.open-sans {
-    font-family : 'Open Sans', sans-serif;
+.source-sans-pro {
+    font-family: 'Source Sans Pro', sans-serif;
 }
