--- a/assets/scss/_utils.scss
+++ b/assets/scss/_utils.scss
@@ -1,3 +1,5 @@
+@import 'the-goods';
+
 .absolute-fill {
     position : absolute;
     height   : 100%;
@@ -19,4 +21,11 @@
     top       : 50%;
     left      : 50%;
     transform : translate(-50%, -50%);
+}
+
+.text-two-col {
+    @include screen-xl {
+        column-count : 2;
+        column-gap   : 4rem;
+    }
 }
