--- a/assets/scss/modules/_buttons.scss
+++ b/assets/scss/modules/_buttons.scss
@@ -1,7 +1,9 @@
 @import "../the-goods";
 
-.cta {
+.cta,
+a.cta {
     border-radius  : 0.5rem;
+    display        : inline-block;
     font-size      : 1.6rem;
     letter-spacing : 0.05em;
     line-height    : 1.4;
@@ -13,6 +15,10 @@
     &--highlight {
         background-color : $color-molten;
         color            : white;
+
+        a {
+            color : white;
+        }
 
         &:hover {
             background-color : $color-off-black;
@@ -39,6 +45,6 @@ input[type=submit] {
     width            : 4rem;
 
     &:hover {
-        border-color: $color-off-black;
+        border-color : $color-off-black;
     }
 }
