Updates to shop page layout & styles

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -28,6 +28,12 @@ body {
     margin     : 0;
 }
 
+h2 {
+    font-size: 3.2rem;
+    line-height: 1.34;
+    margin: 0 0 2rem;
+}
+
 a, button {
 
     &:focus {
