Mobile styles for Header & Homepage

--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -40,5 +40,6 @@ $cubic-out : cubic-bezier(0.215, 0.61, 0.355, 1);
 //----------------------------------------------
 // Dimensions
 //----------------------------------------------
-$header-height : 13.5rem;
+$header-height-mobile : 8.4rem;
+$header-height-desk : 13.5rem;
 $footer-height : 6.5rem;
