--- a/assets/scss/bootstrap/_overrides.scss
+++ b/assets/scss/bootstrap/_overrides.scss
@@ -1,6 +1,8 @@
 //----------------------------------------------------------------
 //  Override Bootstrap vars in a separate file for future-proofing
 //----------------------------------------------------------------
+$grid-gutter-width: 60px !default;
+
 $grid-breakpoints : (
     xs: 0,
     sm: 576px,
