--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -29,9 +29,14 @@ body {
 }
 
 h2 {
-    font-size   : 3.2rem;
+    font-size   : 2.8rem;
     line-height : 1.34;
-    margin      : 0 0 2rem;
+    margin      : 0 0 1rem;
+
+    @include screen-md-lg-xl {
+        font-size : 3.2rem;
+        margin    : 0 0 2rem;
+    }
 }
 
 a, button {
@@ -57,7 +62,7 @@ img {
 p.callout {
     font-size   : 2rem;
     line-height : 1.6;
-    margin      : 4rem auto;
+    margin      : 4rem auto 6rem auto;
     text-align  : center;
 
     @include screen-md-lg-xl {
