--- a/assets/scss/modules/_buttons.scss
+++ b/assets/scss/modules/_buttons.scss
@@ -2,12 +2,14 @@
 
 .cta,
 a.cta {
+    border         : 0;
     border-radius  : 0.5rem;
     display        : inline-block;
     font-size      : 1.6rem;
     letter-spacing : 0.05em;
     line-height    : 1.4;
     margin         : 1rem 0;
+    outline        : none;
     padding        : 1rem 2rem;
     text-transform : uppercase;
     transition     : color 250ms $cubic-out, background-color 250ms $cubic-out;
