--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -62,13 +62,16 @@ img {
 p.callout {
     font-size   : 2rem;
     line-height : 1.6;
-    margin      : 4rem auto 6rem auto;
+    margin      : 4rem auto 5rem auto;
     text-align  : center;
 
     @include screen-md-lg-xl {
         font-size : 2.4rem;
         margin    : 7rem auto;
-        max-width : 70%;
+    }
+
+    @include screen-lg-xl {
+        max-width: 70%;
     }
 
     .cta {
