--- a/assets/scss/_transitions.scss
+++ b/assets/scss/_transitions.scss
@@ -9,11 +9,11 @@
 }
 
 .page-enter-active, .layout-enter-active {
-    transition: opacity .8s $cubic-out, transform .8s $cubic-out;
+    transition: opacity .8s $cubic-out;
 }
 
 .page-leave-active, .layout-leave-active {
-    transition: opacity .3s $cubic-out, transform .3s $cubic-out;
+    transition: opacity .3s $cubic-out;
 }
 .page-enter, .page-leave-active,
 .layout-enter, .layout-leave-active {
