Copperplate font fallback, check for IE & Edge

--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -1,5 +1,5 @@
 .copperplate {
-    font-family : Copperplate, "Copperplate Gothic Light", sans-serif;
+    font-family : Copperplate, 'Copperplate Gothic Light', 'Alegreya', sans-serif;
 }
 
 .barlow {
